# python-sdk

examples/portfoliomanager/: README.md  client.py  demo.py  market_news_agent.py  requirements.txt
examples/portfoliomanager/agents/: __init__.py  integration.py
examples/portfoliomanager/mcp_news_server/: server.py
examples/portfoliomanager/mcp_portfolio_server/: __init__.py  server.py
portfoliomanager/: README.md  portfolio_agent.py  portfolio_data.json  pyproject.toml
portfoliomanager/agents/: run_agent.py
portfoliomanager/mcp_news_server/: __init__.py  server.py
